[tool.poetry]
name = "sqlalchan"
version = "0.0.1"
description = "Toy-example how possible to customize SQLAlchemy Class definition and mapping your custom metaclass that inherit from SQLAlchemy DeclarativeMeta Class."
authors = ["xnuinside <xnuinside@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
sqlalchemy = "^1.3"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
